--- a/crates/transmog-bincode/src/.crate-docs.md
+++ b/crates/transmog-bincode/src/.crate-docs.md
@@ -33,9 +33,9 @@ assert_eq!(deserialized, 42);
 
 [Bincode][bincode-type] offers all configuration options [bincode][bincode] exposes.
 
-[format]: https://khonsulabs.github.io/transmog/main/transmog/trait.Format.html
 [bincode]: https://github.com/bincode-org/bincode
-[bincode-type]: https://khonsulabs.github.io/transmog/main/transmog_cbor/struct.Cbor.html
+[bincode-type]: crate::Bincode
+[format]: crate::transmog::Format
 [transmog-async]: https://crates.io/crates/transmog-async
 [transmog-bincode]: https://crates.io/crates/transmog-bincode
 [transmog-cbor]: https://crates.io/crates/transmog-cbor
