--- a/crates/transmog/src/.crate-docs.md
+++ b/crates/transmog/src/.crate-docs.md
@@ -52,7 +52,7 @@ The [`transmog-async`][transmog-async] crate is a fork of
 [`async-bincode`](https://crates.io/crates/async-bincde), altered to support the
 [`Format`][format] trait.
 
-[format]: https://khonsulabs.github.io/transmog/main/transmog/trait.Format.html
+[format]: crate::Format
 [transmog-async]: https://crates.io/crates/transmog-async
 [transmog-bincode]: https://crates.io/crates/transmog-bincode
 [transmog-cbor]: https://crates.io/crates/transmog-cbor
