--- a/crates/transmog-cbor/src/.crate-docs.md
+++ b/crates/transmog-cbor/src/.crate-docs.md
@@ -16,8 +16,8 @@ let deserialized: u64 = cbor.deserialize(&serialized).unwrap();
 assert_eq!(deserialized, 42);
 ```
 
-[format]: https://khonsulabs.github.io/transmog/main/transmog/trait.Format.html
-[cbor-type]: https://khonsulabs.github.io/transmog/main/transmog_cbor/struct.Cbor.html
+[cbor-type]: crate::Cbor
+[format]: crate::transmog::Format
 [transmog-async]: https://crates.io/crates/transmog-async
 [transmog-bincode]: https://crates.io/crates/transmog-bincode
 [transmog-cbor]: https://crates.io/crates/transmog-cbor
